--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+jwt.secret=hhastore
+
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://satwebdatabase1210.cvlo6oqxxzw7.us-west-2.rds.amazonaws.com:3306/hha
 spring.datasource.username=root
