--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://satwebdatabase1210.cvlo6oqxxzw7.us-west-2.rds
 spring.datasource.username=root
 spring.datasource.password=password
 server.port=5000
+
+server.error.include-message=always
