--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.password=password
 server.port=5000
 
 server.error.include-message=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hha.test.2021@gmail.com
+spring.mail.password=hhapassword!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
