--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.4</version>
+        </dependency>
 
-   </dependencies>
+    </dependencies>
 
     <build>
         <plugins>
