--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>2.1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.interceptor</groupId>
+            <artifactId>javax.interceptor-api</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
